Added abstract class DocumentContext

--- a/src/CosmosDbTest.Console/Properties/launchSettings.json
+++ b/src/CosmosDbTest.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CosmosDbTest.Console": {
       "commandName": "Project",
-      "commandLineArgs": "ConfigureDb"
+      "commandLineArgs": "AddAlert"
     }
   }
 }
